Update BotController.java
Added error message in bot pick.